mykubernetes/04-open-webui-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
spec:
  serviceName: "open-webui"
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      volumes:
      - name: open-webui-data
        persistentVolumeClaim:
          claimName: open-webui-data-pvc
      containers:
      - name: open-webui
        image: richardjoseph1/open-webui:db22a86d52385db331a6df669d013cb18235f8dd
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: open-webui-data
          mountPath: /app/backend/data
        resources:
          requests:
            cpu: "100m"
            memory: "500Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        startupProbe:
          httpGet:
            path: /
            port: 8080
          failureThreshold: 35
          periodSeconds: 30
        
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
