mykubernetes/03-open-webui-service.yml
# 03-open-webui.yml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
spec:
  type: ClusterIP
  ClusterIP: None 
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
